unpackaged/main/default/objects/Contact/fields/Donations_During_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Donations_During_Last_Year__c</fullName>
    <formula>npsp__Number_of_Soft_Credits_Last_Year__c +  npo02__OppsClosedLastYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a calculation of the Sum of Number of Hard and Soft Credits last year</inlineHelpText>
    <label>Donations During Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>