unpackaged/main/default/objects/Contact/fields/Donor_Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Donor_Qualification_Date__c</fullName>
    <label>Donor Qualification Date</label>
    <type>Date</type>
</CustomField>