unpackaged/main/default/objects/Contact/fields/Echelon_Date__c.field-meta.xml
<CustomField>
    <fullName>Echelon_Date__c</fullName>
    <label>Echelon Date</label>
    <type>Date</type>
</CustomField>