unpackaged/main/default/objects/Contact/fields/Ecosystem_Tags__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_Tags__c</fullName>
    <label>Ecosystem Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Producers Network</fullName>
            </value>
            <value>
                <fullName>Resilience Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>