unpackaged/main/default/objects/Contact/fields/EDAF_Member_Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>EDAF_Member_Opted_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if donor has explicitly declined EDAF Membership</description>
    <inlineHelpText>Check if donor has explicitly declined EDAF Membership</inlineHelpText>
    <label>EDAF Member Opted Out</label>
    <type>Checkbox</type>
</CustomField>