unpackaged/main/default/objects/Contact/fields/EDF_Advocacy_Network_Grasstop__c.field-meta.xml
<CustomField>
    <fullName>EDF_Advocacy_Network_Grasstop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leadership member of the EDF Advocacy Network</description>
    <label>EDF Advocacy Network Grasstop</label>
    <type>Checkbox</type>
</CustomField>