unpackaged/main/default/objects/Contact/fields/EDF_CC_Notes__c.field-meta.xml
<CustomField>
    <fullName>EDF_CC_Notes__c</fullName>
    <inlineHelpText>Add notes about relationship past jobs, interest in network activities, willingness to be a reference, etc.</inlineHelpText>
    <label>EDF CC Notes</label>
    <type>TextArea</type>
</CustomField>