unpackaged/main/default/objects/Contact/fields/EDF_CC_Role__c.field-meta.xml
<CustomField>
    <fullName>EDF_CC_Role__c</fullName>
    <label>EDF CC Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Direct Supervisor</fullName>
            </value>
            <value>
                <fullName>High Level Sponsor</fullName>
            </value>
            <value>
                <fullName>HR Contact</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Press Contact</fullName>
            </value>
            <value>
                <fullName>Other Host Network Member</fullName>
            </value>
            <value>
                <fullName>China Network - Experts</fullName>
            </value>
            <value>
                <fullName>China Network - Recruitment</fullName>
            </value>
            <value>
                <fullName>BETC Participant</fullName>
            </value>
            <value>
                <fullName>Advocacy Participant</fullName>
            </value>
            <value>
                <fullName>Alumni Advisory Board</fullName>
            </value>
            <value>
                <fullName>Active Advocacy Network Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>