unpackaged/main/default/objects/Contact/fields/EDF_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>EDF_Employee_ID__c</fullName>
    <description>HRIS  employee ID</description>
    <externalId>true</externalId>
    <label>EDF Employee ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>