unpackaged/main/default/objects/Contact/fields/EDF_Europe_Last_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_Europe_Last_Opt_In_Date__c</fullName>
    <inlineHelpText>This field is populated by Flow when an Opportunity or Action is logged for EDF Europe.</inlineHelpText>
    <label>EDF Europe Last Opt In Date</label>
    <type>Date</type>
</CustomField>