unpackaged/main/default/objects/Contact/fields/EDF_First_Gift_Amount_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_First_Gift_Amount_Contact__c</fullName>
    <description>This field captures the Close Amount of the first received Opportunity.</description>
    <inlineHelpText>The Close Amount of the first received Opportunity where the Contact has a hard or soft credit (not including Planned Gifts)</inlineHelpText>
    <label>First Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>