unpackaged/main/default/objects/Contact/fields/EDF_First_Gift_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_First_Gift_Date_Contact__c</fullName>
    <description>This field captures the Close Date of the first received Opportunity.</description>
    <inlineHelpText>The Close Date of the first received Opportunity where the Contact has a hard or soft credit (not including Planned Gifts)</inlineHelpText>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>