unpackaged/main/default/objects/Contact/fields/EDF_HPC_Amount_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_HPC_Amount_Contact__c</fullName>
    <description>This field captures the Close Amount of the received Opportunity with the highest Amount</description>
    <inlineHelpText>The Close Amount of the received Opportunity with the highest Amount where the Contact has a hard or soft credit gift (Planned Gifts not included).</inlineHelpText>
    <label>HPC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>