unpackaged/main/default/objects/Contact/fields/EDF_HPC_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_HPC_Date_Contact__c</fullName>
    <description>This field captures the Close Date of the received Opportunity with the highest Amount</description>
    <inlineHelpText>The Close Date of the received Opportunity with the highest Amount where the Contact has a hard or soft credit gift (Planned Gifts not included).</inlineHelpText>
    <label>HPC Date</label>
    <type>Date</type>
</CustomField>