unpackaged/main/default/objects/Contact/fields/EDF_Live_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>EDF_Live_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track opt ins for our virtual events and streamline event list management</description>
    <label>EDF Live Opt-In</label>
    <type>Checkbox</type>
</CustomField>