unpackaged/main/default/objects/Contact/fields/EDF_MRC_Amount_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_MRC_Amount_Contact__c</fullName>
    <description>Field used to capture the Close Amount of the most recently received Opportunity. No distinction between hard or soft credit is made. Calculated externally by IT Data team</description>
    <inlineHelpText>The Close Amount of the most recently received Opportunity where the Contact has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>MRC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>