unpackaged/main/default/objects/Contact/fields/EDF_MRC_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>EDF_MRC_Date_Contact__c</fullName>
    <description>This field captures the Close Date of the most recent received Opportunity.</description>
    <inlineHelpText>The Close Date of the most recent received Opportunity where the Contact has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>MRC Date</label>
    <type>Date</type>
</CustomField>