unpackaged/main/default/objects/Contact/fields/EDF_of_Donations_this_FY__c.field-meta.xml
<CustomField>
    <fullName>EDF_of_Donations_this_FY__c</fullName>
    <description>Externally calcuated field. Soft credit is defined by OCR = Funder - Soft Credit, DAF, Workplace Giving, Sponsor, Agency. Qualifying stages = Received, Received as Unconditional Pledge, Received as Conditional Pledge. All Opp Record Types except PG. Only the master field should be accessible to users.</description>
    <inlineHelpText>The total count of all received Opportunities where the Close Date is this FY and Contact has a hard or soft credit. (Planned Gifts not included).</inlineHelpText>
    <label># of Donations this FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>