unpackaged/main/default/objects/Contact/fields/EDF_Total_Amount_Committed_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>EDF_Total_Amount_Committed_Lifetime__c</fullName>
    <description>Externally calculated field .Based on Close Amount (not Amount). Soft credit is defined by OCR = Funder - Soft Credit, DAF, Workplace Giving, Sponsor, Agency and grabs amount from PSC. Qualifying stages = Received, Received as Unconditional Pledge, Received as Conditional Pledge. All Opp Record Types except PG. Only the master field should be accessible to users.</description>
    <inlineHelpText>The sum of the Close Amount of all received Opportunities where the Contact has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>Total Amount Committed Lifetime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>