unpackaged/main/default/objects/Contact/fields/EDFBIZ_Company_Commitments__c.field-meta.xml
<CustomField>
    <fullName>EDFBIZ_Company_Commitments__c</fullName>
    <label>Company Commitments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GHG</fullName>
            </value>
            <value>
                <fullName>RE100</fullName>
            </value>
            <value>
                <fullName>c$</fullName>
            </value>
            <value>
                <fullName>SBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>