unpackaged/main/default/objects/Contact/fields/EDFBIZ_Company_Memberships__c.field-meta.xml
<CustomField>
    <fullName>EDFBIZ_Company_Memberships__c</fullName>
    <label>EDFBIZ Company Memberships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bicep</fullName>
            </value>
            <value>
                <fullName>BELC</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Low Carbon 2.0</fullName>
            </value>
            <value>
                <fullName>USCAP</fullName>
            </value>
            <value>
                <fullName>WASI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>