unpackaged/main/default/objects/Contact/fields/EM_Communication_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>EM_Communication_Skills_Rating__c</fullName>
    <inlineHelpText>Does person have strong communication skills?</inlineHelpText>
    <label>EM Communication Skills Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>