unpackaged/main/default/objects/Contact/fields/Email_Undeliverable__c.field-meta.xml
<CustomField>
    <fullName>Email_Undeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy field that no longer applies because undeliverable emails/phones shouldn't be on the contact</description>
    <label>Email Undeliverable_DEL</label>
    <type>Checkbox</type>
</CustomField>