unpackaged/main/default/objects/Contact/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>