unpackaged/main/default/objects/Contact/fields/Entity_Interest__c.field-meta.xml
<CustomField>
    <fullName>Entity_Interest__c</fullName>
    <description>Interest in individual EDF organizations</description>
    <inlineHelpText>Choose the EDF organizations in which the contact has an interest</inlineHelpText>
    <label>Entity Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>