unpackaged/main/default/objects/Contact/fields/Environmental_and_Related_Giving__c.field-meta.xml
<CustomField>
    <fullName>Environmental_and_Related_Giving__c</fullName>
    <label>Environmental and Related Giving</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>