unpackaged/main/default/objects/Contact/fields/Estimated_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Net_Worth__c</fullName>
    <label>Estimated Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>