unpackaged/main/default/objects/Contact/fields/Expected_Value_3FY_Contact__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value_3FY_Contact__c</fullName>
    <description>Contact's cumulative expected value for current and next 2 FYs</description>
    <inlineHelpText>Contact's cumulative expected value for current and next 2 FYs</inlineHelpText>
    <label>3FY Expected Value Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>