unpackaged/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>