unpackaged/main/default/objects/Contact/fields/External_Relations_Top_100__c.field-meta.xml
<CustomField>
    <fullName>External_Relations_Top_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Relations Top 100</label>
    <type>Checkbox</type>
</CustomField>