unpackaged/main/default/objects/Contact/fields/Fellow__c.field-meta.xml
<CustomField>
    <fullName>Fellow__c</fullName>
    <inlineHelpText>Notes regarding recommendation Fellow speaking to groups and/or VIP 1:1. (Entered by primary handler)</inlineHelpText>
    <label>Fellow Speaking Capability Notes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>